@@ -1,6 +1,7 @@
 What's new in thtk 5:
 
 Make: --enable-combine was removed.
+thanm: The sentinel instructions are left out from the scripts.
 
 What's new in thtk 4:
 
